--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ar">
 <head>
   <meta charset="UTF-8" />
+  <meta name="google-site-verification" content="rwzEY93UuJJhC2_NYtp1evoLeufQtrGAVfuoY2O97VQ" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>العوامل العالمية والمحلية المؤثرة على سعر الدولار في السوق السوداء</title>
   <style>
@@ -250,3 +251,4 @@
 
 </body>
 </html>
+
